<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.test.sample.customcalculator.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/txtOperand1"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="5dp"
        android:width="@dimen/activity_button_width"
        android:height="@dimen/activity_button_height"
        android:textSize="@dimen/activity_button_text_size"
        android:layout_alignParentStart="true"
        android:textAlignment="viewEnd" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/txtOperand2"
        android:layout_marginTop="5dp"
        android:layout_below="@+id/txtOperand1"
        android:layout_alignEnd="@+id/txtOperand1"
        android:width="@dimen/activity_button_width"
        android:height="@dimen/activity_button_height"
        android:textSize="@dimen/activity_button_text_size"
        android:onClick="onClickSetValues"
        android:layout_alignParentStart="true"
        android:textAlignment="viewEnd" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/NumberOne"
        android:id="@+id/btnOne"
        android:layout_below="@+id/txtOperand2"
        android:layout_alignParentStart="true"
        android:width="@dimen/activity_button_width"
        android:height="@dimen/activity_button_height"
        android:textSize="@dimen/activity_button_text_size"
        android:onClick="onClickSetValues"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/NumberTwo"
        android:id="@+id/btnTwo"
        android:layout_alignBottom="@+id/btnOne"
        android:layout_toEndOf="@+id/btnOne"
        android:width="@dimen/activity_button_width"
        android:height="@dimen/activity_button_height"
        android:textSize="@dimen/activity_button_text_size"
        android:onClick="onClickSetValues"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/NumberThree"
        android:id="@+id/btnThree"
        android:layout_alignBottom="@+id/btnTwo"
        android:layout_toEndOf="@+id/btnTwo"
        android:width="@dimen/activity_button_width"
        android:height="@dimen/activity_button_height"
        android:textSize="@dimen/activity_button_text_size"
        android:onClick="onClickSetValues"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/NumberFour"
        android:id="@+id/btnFour"
        android:layout_below="@+id/btnOne"
        android:layout_alignParentStart="true"
        android:width="@dimen/activity_button_width"
        android:height="@dimen/activity_button_height"
        android:textSize="@dimen/activity_button_text_size"
        android:onClick="onClickSetValues"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/NumberFive"
        android:id="@+id/btnFive"
        android:layout_alignTop="@+id/btnFour"
        android:layout_toEndOf="@+id/btnFour"
        android:width="@dimen/activity_button_width"
        android:height="@dimen/activity_button_height"
        android:textSize="@dimen/activity_button_text_size"
        android:onClick="onClickSetValues"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/NumberSix"
        android:id="@+id/btnSix"
        android:layout_alignBottom="@+id/btnFive"
        android:layout_alignEnd="@+id/btnThree"
        android:width="@dimen/activity_button_width"
        android:height="@dimen/activity_button_height"
        android:textSize="@dimen/activity_button_text_size"
        android:onClick="onClickSetValues"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/NumberSeven"
        android:id="@+id/btnSeven"
        android:layout_below="@+id/btnFour"
        android:layout_toStartOf="@+id/btnFive"
        android:width="@dimen/activity_button_width"
        android:height="@dimen/activity_button_height"
        android:textSize="@dimen/activity_button_text_size"
        android:onClick="onClickSetValues"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/NumberEight"
        android:id="@+id/btnEight"
        android:layout_alignBottom="@+id/btnSeven"
        android:layout_toEndOf="@+id/btnSeven"
        android:width="@dimen/activity_button_width"
        android:height="@dimen/activity_button_height"
        android:textSize="@dimen/activity_button_text_size"
        android:onClick="onClickSetValues"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/NumberNine"
        android:id="@+id/btnNine"
        android:layout_alignBottom="@+id/btnEight"
        android:layout_alignEnd="@+id/btnSix"
        android:width="@dimen/activity_button_width"
        android:height="@dimen/activity_button_height"
        android:textSize="@dimen/activity_button_text_size"
        android:onClick="onClickSetValues"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/NumberZero"
        android:id="@+id/btnZero"
        android:layout_below="@+id/btnSeven"
        android:layout_toEndOf="@+id/btnSeven"
        android:width="@dimen/activity_button_width"
        android:height="@dimen/activity_button_height"
        android:textSize="@dimen/activity_button_text_size"
        android:onClick="onClickSetValues"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/OperatorPlus"
        android:id="@+id/btnPlus"
        android:layout_alignBottom="@+id/btnZero"
        android:layout_toStartOf="@+id/btnZero"
        android:width="@dimen/activity_button_width"
        android:height="@dimen/activity_button_height"
        android:textSize="@dimen/activity_button_text_size"
        android:onClick="onClickSetValues"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/OperatorMinus"
        android:id="@+id/btnMinus"
        android:layout_alignTop="@+id/btnZero"
        android:layout_alignEnd="@+id/btnNine"
        android:width="@dimen/activity_button_width"
        android:height="@dimen/activity_button_height"
        android:textSize="@dimen/activity_button_text_size"
        android:onClick="onClickSetValues"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/OperatorMultiply"
        android:id="@+id/btnMultiply"
        android:layout_below="@+id/btnZero"
        android:layout_alignParentStart="true"
        android:width="@dimen/activity_button_width"
        android:height="@dimen/activity_button_height"
        android:textSize="@dimen/activity_button_text_size"
        android:onClick="onClickSetValues"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/OperatorDivide"
        android:id="@+id/btnDivide"
        android:layout_below="@+id/btnZero"
        android:layout_toStartOf="@+id/btnMinus"
        android:width="@dimen/activity_button_width"
        android:height="@dimen/activity_button_height"
        android:textSize="@dimen/activity_button_text_size"
        android:onClick="onClickSetValues"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/OperatorPercent"
        android:id="@+id/btnPercent"
        android:layout_below="@+id/btnMinus"
        android:layout_alignStart="@+id/btnMinus"
        android:width="@dimen/activity_button_width"
        android:height="@dimen/activity_button_height"
        android:textSize="@dimen/activity_button_text_size"
        android:onClick="onClickSetValues"/>
</RelativeLayout>
